@@ -3,7 +3,9 @@
  * src/scplugin.c:
    Fix deprecated usage of g_win32_get_package_installation_directory(),
    pass NULL as package name.
-
+ * po/de.po, src/gui.c, src/scplugin.c, src/speller.c, src/gui.h,
+   src/scplugin.h, src/speller.h:
+   Update copyright information.
 
 
 2008-12-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
